change gradle script